# editing

./: Cargo.toml  index.html  justfile
dirty_setter_macro/: Cargo.toml
dirty_setter_macro/src/: lib.rs
into_static_str/: Cargo.toml
into_static_str/src/: lib.rs
src/: animation.rs  app.rs  bounding_box.rs  container.rs  element.rs  event_manager.rs  events.rs  helper.rs  history.rs  image.rs  lib.rs  object_manager.rs  render_control.rs  renderer.rs  scene_manager.rs
src/animation/: qwen.rs
src/element/: rect.rs
src/events/: app_events.rs
src/renderer/: canvas_2d_renderer.rs  offscreen_canvas_2d_renderer.rs
