[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "CssStyleDeclaration",
    "ResizeObserver",
    "HtmlImageElement",
    "DomMatrix",
    "TextMetrics",
] }
console_error_panic_hook = "0.1.7"