[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-bindgen-test = "0.3.43"
web-sys = { version = "0.3.70", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "CssStyleDeclaration",
    "ResizeObserver",
    "HtmlImageElement",
    "DomMatrix",
    "TextMetrics",
    "CanvasGradient",
    "CanvasPattern",
    "SvgMatrix",
    "SvgsvgElement",
    "ImageData",
    "Performance",
] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
nalgebra = "0.33.0"
once_cell = "1.19.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
wasm-timer = "0.2.5"
